--- a/mobile.html
+++ b/mobile.html
@@ -397,7 +397,7 @@
             <li class="item"><a href="https://chat.openai.com/g/g-NjfOntUt3-understanding-papers"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Understanding Papers</a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>  
             <li class="item"><a href="https://illuminate.withgoogle.com/home"> Illuminate <span style="font-size: 0.8em; font-style: italic;"> by Google</span> </a></li>
-            <li class="item"><a href="https://notebooklm.google/?location=us-only">NotebookLM<span style="font-size: 0.8em; font-style: italic;"> by Google  # US Only</span></a></li>
+            <li class="item"><a href="https://notebooklm.google/?location=us-only">NotebookLM<span style="font-size: 0.8em; font-style: italic;"> by Google </span></a></li>
             <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
             <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>         
             <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>  
@@ -462,7 +462,7 @@
             <li class="item"><a href="https://portal.azure.com/#home">Azure<span style="font-size: 0.8em; font-style: italic;"> # by Micorosft</span></a></li>
             <li class="item"><a href="https://console.cloud.google.com/vertex-ai?hl=en&project=turing-poet-416719">Vertex<span style="font-size: 0.8em; font-style: italic;"> # by Google</span></a>
             <li class="item"><a href="https://eu-central-1.console.aws.amazon.com/bedrock/home?region=eu-central-1#/">Bedrock<span style="font-size: 0.8em; font-style: italic;"> # by Amazon</span></a>  
-            <li class="item"><a href="hhttps://cloud.llamaindex.ai/"> Llama Cloud <span style="font-size: 0.8em; font-style: italic;"> # by Meta </span></a> 
+            <li class="item"><a href="https://cloud.llamaindex.ai/"> Llama Cloud <span style="font-size: 0.8em; font-style: italic;"> # by Meta </span></a> 
         </ul>
     </div>
 </div>
