--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
                 <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
-                
+                <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>              
                 <a href="https://poe.com/Search_Planner" target="_blank" class="button-simple">Poe / Search Planner</a>
             </ul>
         </div>
@@ -393,7 +393,8 @@
                 <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
                 <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>
                 <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>
-                <li class="item"><a href="https://www.txyz.ai/?home">txyz</a></li>                
+                <li class="item"><a href="https://www.txyz.ai/?home">txyz</a></li>
+                <li class="item"><a href="https://www.explainpaper.com/">Explainpaper</a></li>
                 <li class="item"><a href="https://yiyibooks.cn/">一译<span style="font-size: 0.8em; font-style: italic;"> # Translation</span></a></li>
                 <p>&nbsp⁎ <img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / GPTs: </p>
                 <p> &nbsp <a href="https://chat.openai.com/g/g-bo0FiWLY7-consensus"><span style="font-size: 0.7em;">&nbsp 🔗</span>Consensus</a>&nbsp<a href="https://chat.openai.com/g/g-NgAcklHd8-scispace"><span style="font-size: 0.7em;">&nbsp 🔗</span>SciSpace</a></p>
