--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
                     "https://www.phind.com/search?Home=true",
                     "https://metaphor.systems/",
                     "https://www.findera.ai/",
-                    "https://komo.ai/"
+                    "https://komo.ai/",
+                    "https://felo.ai/search",
+                    "https://www.genspark.ai/",
                 ];
                 for (var i = 0; i < links.length; i++) {
                     window.open(links[i], "_blank");
@@ -251,7 +253,8 @@
                 <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
                 <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
-                <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>              
+                <li class="item"><a href="https://felo.ai/search">Felo Search</a></li>      
+                <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>
                 <a href="https://poe.com/Search_Planner" target="_blank" class="button-simple">Poe / Search Planner</a>
             </ul>
         </div>
