--- a/mobile.html
+++ b/mobile.html
@@ -236,7 +236,9 @@
                 "https://www.phind.com/search?Home=true",
                 "https://metaphor.systems/",
                 "https://www.findera.ai/",
-                "https://komo.ai/"
+                "https://komo.ai/",
+                "https://felo.ai/search",
+                "https://www.genspark.ai/",
             ];
             for (var i = 0; i < links.length; i++) {
                 window.open(links[i], "_blank");
@@ -260,6 +262,7 @@
             <li class="item"><a href="https://metaphor.systems/">Metaphor Search</a></li>
             <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
             <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
+            <li class="item"><a href="https://felo.ai/search">Felo Search</a></li>
             <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li> 
 
             <br /> 
