--- a/mobile.html
+++ b/mobile.html
@@ -210,7 +210,7 @@
             <li class="item"><a href="https://copilot.microsoft.com/">Microsoft Copilot</a></li>
             <li class="item"><a href="https://gemini.google.com/app">Gemini<span style="font-size: 0.8em; font-style: italic;"> by Google</span></a></li>
             <li class="item"><a href="https://claude.ai/chat/7e6cda4b-e744-4791-ac12-c2866c08235f">Claude<span style="font-size: 0.8em; font-style: italic;"> by Anthropic</span></a></li>
-            <li class="item"><a href="https://www.llama2.ai/">Llama<span style="font-size: 0.8em; font-style: italic;"> by Meta</span></a></li>
+            <li class="item"><a href="https://www.meta.ai/">Llama<span style="font-size: 0.8em; font-style: italic;"> by Meta</span></a></li>
             <li class="item"><a href="https://chat.mistral.ai/">Mistral</a></li>
             <li class="item"><a href="https://pi.ai/talk">Pi, personal AI</a></li>
             <li class="item"><a href="https://cohere.com/">Cohere</a></li>
@@ -342,6 +342,8 @@
             <li class="item"><a href="https://duckduckgo.com/?q=DuckDuckGo&ia=chat">DuckDuckGO Chat</a></li>
             <li class="item"><a href="https://huggingface.co/chat/">HuggingChat<span style="font-size: 0.8em; font-style: italic;"> by Hugging Face # open-source only</span></a></li>
             <li class="item"><a href="https://groq.com/">Groq<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+            <li class="item"><a href="https://inference.cerebras.ai/">Cerebras<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+            <li class="item"><a href="https://cloud.sambanova.ai/">SambaNova<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
             <li class="item"><a href="https://chat.forefront.ai/">Forefront</a></li>
                             
             <hr size="1" style="margin-left: 0;">
@@ -384,7 +386,7 @@
             <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> # 20/day</span></a></li>
             <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> # daily limits</span></a>
             <li class="item"><a href="https://tammy.ai/">tammy<span style="font-size: 0.8em; font-style: italic;"> # 5/day</span></a>
-            <li class="item"><a href="https://transcriptal.com/">Transcriptal<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>   
+            <li class="item"><a href="https://scribetube.com/">ScribeTube<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
         </ul>
     </div>
 </div>
@@ -397,9 +399,9 @@
         <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
-            <li class="item"><a href="https://chat.openai.com/g/g-2snGs5H6C-academic-paper-summary-by-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. by Chapter</a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-NjfOntUt3-understanding-papers"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Understanding Papers</a></li>
-            <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>  
+            <li class="item"><a href="https://chatgpt.com/g/g-flUScdE6U-summary-with-original-structure-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Summary with Original Structure / Chapter</a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>   
             <li class="item"><a href="https://illuminate.withgoogle.com/home"> Illuminate <span style="font-size: 0.8em; font-style: italic;"> by Google</span> </a></li>
             <li class="item"><a href="https://notebooklm.google/?location=us-only">NotebookLM<span style="font-size: 0.8em; font-style: italic;"> by Google </span></a></li>
             <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
