--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                 function openall1() {
                 var links = [
                     "https://www.perplexity.ai/",
+                    "https://felo.ai/search",
                     "https://poe.com/Web-Search",
                     "https://you.com/",
                     "https://iask.ai/",
@@ -228,7 +229,6 @@
                     "https://metaphor.systems/",
                     "https://www.findera.ai/",
                     "https://komo.ai/",
-                    "https://felo.ai/search",
                     "https://www.genspark.ai/",
                 ];
                 for (var i = 0; i < links.length; i++) {
@@ -242,6 +242,7 @@
        
             <ul>
                 <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
+                <li class="item"><a href="https://felo.ai/search">Felo Search</a></li>   
                 <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
                 <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
                 <li class="item"><a href="https://iask.ai/">iAsk<br/></a></li>
@@ -253,7 +254,6 @@
                 <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
                 <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
-                <li class="item"><a href="https://felo.ai/search">Felo Search</a></li>      
                 <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>
                 <a href="https://poe.com/Search_Planner" target="_blank" class="button-simple">Poe / Search Planner</a>
             </ul>
@@ -332,11 +332,9 @@
                 <li class="item"><a href="https://groq.com/">Groq<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
                 <li class="item"><a href="https://inference.cerebras.ai/">Cerebras<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
                 <li class="item"><a href="https://cloud.sambanova.ai/">SambaNova<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
-                <li class="item"><a href="https://chat.forefront.ai/">Forefront</a></li>
                 
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
-                <li class="item"><a href="https://www.tasking.ai/"> Tasking AI <span style="font-size: 0.8em; font-style: italic;"> # w. API </span></a></li> 
                 <li class="item"><a href="https://yichat.ai/"> YiCHAT <span style="font-size: 0.8em; font-style: italic;"> # w. API </span></a></li> 
                 <li class="item"><a href="https://www.mixturegpt.com/">MixtureGPT<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li> 
                 <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
@@ -390,9 +388,8 @@
 
             <ul>
                 <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-NjfOntUt3-understanding-papers"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Understanding Papers</a></li>
                 <li class="item"><a href="https://chatgpt.com/g/g-flUScdE6U-summary-with-original-structure-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Summary with Original Structure / Chapter</a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Sum. Content （中文PPT形式）</a></li>                
+                <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Summarize Content（中文PPT形式）</a></li>                
                 <li class="item"><a href="https://illuminate.withgoogle.com/home"> Illuminate <span style="font-size: 0.8em; font-style: italic;"> by Google</span> </a></li>
                 <li class="item"><a href="https://notebooklm.google/?location=us-only">NotebookLM<span style="font-size: 0.8em; font-style: italic;"> by Google </span></a></li>
                 <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
