--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
                 var links = [
                     "https://metaso.cn/",
                     "https://so.360.com/",
-                    "https://search.tiangong.cn/"
+                    "https://search.tiangong.cn/",
+                    "https://bilin.ai/",
                 ];
                 for (var i = 0; i < links.length; i++) {
                     window.open(links[i], "_blank");
@@ -282,6 +283,7 @@
                 <li class="item"><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
                 <li class="item"><a href="https://so.360.com/">360 AI 搜索</a></li>
                 <li class="item"><a href="https://search.tiangong.cn/">天工 AI 搜索</a></li>
+                <li class="item"><a href="https://bilin.ai/">Bilin Search</a></li>                
                 </ul>
         </div>
     </div>
