--- a/mobile.html
+++ b/mobile.html
@@ -230,15 +230,15 @@
                     "https://poe.com/Web-Search",
                     "https://you.com/",
                     "https://iask.ai/",
+                    "https://floatsearch.ai/",
+                    "https://www.phind.com/search?Home=true",
+                    "https://metaphor.systems/",
+                    "https://komo.ai/",
+                    "https://www.genspark.ai/",
                     "https://chat.openai.com/g/g-p1uPsAIqW-super-search",
                     "https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search",
                     "https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt",
                     "https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert",
-                    "https://www.phind.com/search?Home=true",
-                    "https://metaphor.systems/",
-                    "https://www.findera.ai/",
-                    "https://komo.ai/",
-                    "https://www.genspark.ai/",
             ];
             for (var i = 0; i < links.length; i++) {
                 window.open(links[i], "_blank");
@@ -255,15 +255,16 @@
             <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
             <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
             <li class="item"><a href="https://iask.ai/">iAsk<br/></a></li>
+            <li class="item"><a href="https://floatsearch.ai">Float Search</a></li>
+            <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
+            <li class="item"><a href="https://metaphor.systems/">Metaphor Search</a></li>
+            <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
+            <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li> 
+
             <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Super Search<br/></a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Extensive internet search<br/></a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / PDF Keymate AI Search<br/></a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / SearchGPT-Web Search Expert<br/></a></li>
-            <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
-            <li class="item"><a href="https://metaphor.systems/">Metaphor Search</a></li>
-            <li class="item"><a href="https://www.findera.ai/">Findera<span style="font-size: 0.8em; font-style: italic;"> powered by Groq</span></a></li>
-            <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
-            <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li> 
 
             <br /> 
             
@@ -365,6 +366,7 @@
         <ul>
             <li class="item"><a href="https://explorer.globe.engineer/">Globe Explorer</a></li>
             <li class="item"><a href="https://www.wolframalpha.com/">Wolfram Alpha</a></li>
+            <li class="item"><a href="https://learning.google.com/experiments/learn-about/signup">Learn About by Google</a></li>
             <li class="item"><a href="https://consillium.vercel.app/">Consillium<span style="font-size: 0.8em; font-style: italic;"> via vercel</span></a></li>
             <li class="item"><a href="https://goblin.tools/"> Magic To-do <span style="font-size: 0.8em; font-style: italic;"> by goblin.tools </span></a></li>
                       
