--- a/mobile.html
+++ b/mobile.html
@@ -212,6 +212,7 @@
             <li class="item"><a href="https://claude.ai/chat/7e6cda4b-e744-4791-ac12-c2866c08235f">Claude<span style="font-size: 0.8em; font-style: italic;"> by Anthropic</span></a></li>
             <li class="item"><a href="https://www.meta.ai/">Llama<span style="font-size: 0.8em; font-style: italic;"> by Meta</span></a></li>
             <li class="item"><a href="https://chat.mistral.ai/">Mistral</a></li>
+            <li class="item"><a href="https://x.ai/">xAI</a></li>                
             <li class="item"><a href="https://pi.ai/talk">Pi, personal AI</a></li>
             <li class="item"><a href="https://cohere.com/">Cohere</a></li>
             <li class="item"><a href="https://chat.reka.ai/chat">Reka</a></li>   
@@ -336,7 +337,7 @@
 </div>
 
 <div class="card" onclick="expandCard(this)">
-    <h2 class="header">Multiple LLMs</h2>
+    <h2 class="header">LLM Wrapper</h2>
 
     <div class="urls">
         <hr style=border-color:#ff6600>
@@ -366,7 +367,7 @@
         <ul>
             <li class="item"><a href="https://explorer.globe.engineer/">Globe Explorer</a></li>
             <li class="item"><a href="https://www.wolframalpha.com/">Wolfram Alpha</a></li>
-            <li class="item"><a href="https://learning.google.com/experiments/learn-about/signup">Learn About by Google</a></li>
+
             <li class="item"><a href="https://consillium.vercel.app/">Consillium<span style="font-size: 0.8em; font-style: italic;"> via vercel</span></a></li>
             <li class="item"><a href="https://goblin.tools/"> Magic To-do <span style="font-size: 0.8em; font-style: italic;"> by goblin.tools </span></a></li>
                       
@@ -394,17 +395,17 @@
 </div>
 
 <div class="card" onclick="expandCard(this)">
-    <h2 class="header">Reading Academic Papers</h2>
+    <h2 class="header">Learning</h2>
 
 
     <div class="urls">
         <hr style=border-color:#ff6600>
         <ul>
-            <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
-            <li class="item"><a href="https://chatgpt.com/g/g-flUScdE6U-summary-with-original-structure-chapter"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Summary with Original Structure / Chapter</a></li>
-            <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Summarize Content（中文PPT形式）</a></li>   
-            <li class="item"><a href="https://illuminate.withgoogle.com/home"> Illuminate <span style="font-size: 0.8em; font-style: italic;"> by Google</span> </a></li>
             <li class="item"><a href="https://notebooklm.google/?location=us-only">NotebookLM<span style="font-size: 0.8em; font-style: italic;"> by Google </span></a></li>
+            <li class="item"><a href="https://learning.google.com/experiments/learn-about/signup">Learn About by Google</a></li>
+            <li class="item"><a href="https://illuminate.withgoogle.com/home"> Illuminate <span style="font-size: 0.8em; font-style: italic;"> by Google</span> </a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
+            <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Summarize Content（中文PPT形式）</a></li>   
             <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
             <li class="item"><a href="https://consensus.app/search/">Consensus</a></li>         
             <li class="item"><a href="https://www.chatpdf.com/">ChatPDF</a></li>  
