--- a/mobile.html
+++ b/mobile.html
@@ -240,6 +240,7 @@
                     "https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search",
                     "https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt",
                     "https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert",
+                    "https://beago.ai/", 
             ];
             for (var i = 0; i < links.length; i++) {
                 window.open(links[i], "_blank");
@@ -261,6 +262,7 @@
             <li class="item"><a href="https://metaphor.systems/">Metaphor Search</a></li>
             <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
             <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li> 
+            <li class="item"><a href="https://beago.ai/">BeaGo</a></li>
 
             <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Super Search<br/></a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Extensive internet search<br/></a></li>
@@ -281,7 +283,7 @@
             function openall2() {
             var links = [
                 "https://metaso.cn/",
-                "https://so.360.com/",
+                "https://n.cn/",
                 "https://search.tiangong.cn/",
                 "https://bilin.ai/",
             ];
@@ -296,7 +298,7 @@
         <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
-            <li class="item"><a href="https://so.360.com/">360 AI 搜索</a></li>
+            <li class="item"><a href="https://n.cn/">纳米搜索（原360搜索）</a></li>
             <li class="item"><a href="https://search.tiangong.cn/">天工 AI 搜索</a></li>
             <li class="item"><a href="https://bilin.ai/">Bilin Search</a></li>
         </ul>
@@ -404,6 +406,7 @@
             <li class="item"><a href="https://notebooklm.google/?location=us-only">NotebookLM<span style="font-size: 0.8em; font-style: italic;"> by Google </span></a></li>
             <li class="item"><a href="https://learning.google.com/experiments/learn-about/signup">Learn About by Google</a></li>
             <li class="item"><a href="https://illuminate.withgoogle.com/home"> Illuminate <span style="font-size: 0.8em; font-style: italic;"> by Google</span> </a></li>
+            <li class="item"><a href="https://www.atlas.org/home">Atlas.org </a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-M5VqHMebY-academic-paper-summary-for-learners"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Academic Paper Sum. for Learners</a></li>
             <li class="item"><a href="https://chat.openai.com/g/g-ujcnMvq3H"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Summarize Content（中文PPT形式）</a></li>   
             <li class="item"><a href="https://typeset.io/">SciSpace</a></li>
@@ -453,6 +456,7 @@
             <li class="item"><a href="https://www.futuretools.io/">Furure Tools</a></li>
             <li class="item"><a href="https://opentools.ai/">Open Tools</a></li>
             <li class="item"><a href="https://theresanaiforthat.com/">There's an AI for That</a></li>
+            <li class="item"><a href="https://www.raghut.com/">Raghut</a></li>
                             
             <hr size="1" style="margin-left: 0;">
      
