--- a/mobile.html
+++ b/mobile.html
@@ -270,7 +270,7 @@
             <li class="item"><a href="https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / SearchGPT-Web Search Expert<br/></a></li>
 
             <br /> 
-            
+            <a href="https://demo.exa.ai/hallucination-detector" target="_blank" class="button-simple">Exa Hallucination-detector</a>           
             <a href="https://poe.com/Search_Planner" target="_blank" class="button-simple">Poe / Search Planner</a>   
         </ul>
     </div>
