--- a/index.html
+++ b/index.html
@@ -219,18 +219,14 @@
                 var links = [
                     "https://www.perplexity.ai/",
                     "https://felo.ai/search",
-                    "https://poe.com/Web-Search",
+                    "https://websets.exa.ai/",
+                    "https://exa.ai/search?c=all",
+                    "https://kagi.com/",
                     "https://you.com/",
                     "https://iask.ai/",
-                    "https://floatsearch.ai/",
                     "https://www.phind.com/search?Home=true",
-                    "https://metaphor.systems/",
                     "https://komo.ai/",
                     "https://www.genspark.ai/",
-                    "https://chat.openai.com/g/g-p1uPsAIqW-super-search",
-                    "https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search",
-                    "https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt",
-                    "https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert",
                     "https://beago.ai/", 
                 ];
                 for (var i = 0; i < links.length; i++) {
@@ -245,21 +241,15 @@
             <ul>
                 <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
                 <li class="item"><a href="https://felo.ai/search">Felo Search</a></li>   
-                <li class="item"><a href="https://poe.com/Web-Search">Poe / Web-Search</a></li>
+                <li class="item"><a href="https://websets.exa.ai/">Exa Websets</a></li>
+                <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
+                <li class="item"><a href="https://kagi.com/">Kagi Search</a></li>                  
                 <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
                 <li class="item"><a href="https://iask.ai/">iAsk<br/></a></li>
-                <li class="item"><a href="https://floatsearch.ai">Float Search</a></li>
                 <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
-                <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
                 <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>
                 <li class="item"><a href="https://beago.ai/">BeaGo</a></li>
-
-                <li class="item"><a href="https://chat.openai.com/g/g-p1uPsAIqW-super-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Super Search<br/></a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-HMGSLbYxx-extensive-internet-search"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / Extensive Internet Search<br/></a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-veSrMmasJ-keymate-ai-search-gpt"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / PDF Keymate AI Search<br/></a></li>
-                <li class="item"><a href="https://chat.openai.com/g/g-w1Ngnljjh-searchgpt-ai-web-search-expert"><img src="chatgpt-white.svg" Academwidth="16" height="16"ic  alt="SVG图像" /> / SearchGPT-Web Search Expert<br/></a></li>
-
                 <a href="https://demo.exa.ai/hallucination-detector" target="_blank" class="button-simple">Exa Hallucination-detector</a>
                 <a href="https://poe.com/Search_Planner" target="_blank" class="button-simple">Poe / Search Planner</a>
             </ul>
@@ -275,6 +265,7 @@
                     "https://n.cn/",
                     "https://search.tiangong.cn/",
                     "https://bilin.ai/",
+                    "https://floatsearch.ai/",
                 ];
                 for (var i = 0; i < links.length; i++) {
                     window.open(links[i], "_blank");
@@ -289,7 +280,8 @@
                 <li class="item"><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
                 <li class="item"><a href="https://n.cn/">纳米搜索（原360搜索）</a></li>
                 <li class="item"><a href="https://search.tiangong.cn/">天工 AI 搜索</a></li>
-                <li class="item"><a href="https://bilin.ai/">Bilin Search</a></li>                
+                <li class="item"><a href="https://bilin.ai/">Bilin Search</a></li>     
+                <li class="item"><a href="https://floatsearch.ai">Float Search</a></li>
                 </ul>
         </div>
     </div>
@@ -346,7 +338,6 @@
                 <li class="item"><a href="https://yichat.ai/"> YiCHAT <span style="font-size: 0.8em; font-style: italic;"> # w. API </span></a></li> 
                 <li class="item"><a href="https://www.mixturegpt.com/">MixtureGPT<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li> 
                 <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
-                <li class="item"><a href="https://www.chatbotui.com/">Chatbot UI<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
             </ul>
         </div>
         
@@ -362,7 +353,6 @@
             <ul>
                 <li class="item"><a href="https://explorer.globe.engineer/">Globe Explorer</a></li>
                 <li class="item"><a href="https://www.wolframalpha.com/">Wolfram Alpha</a></li>
-
                 <li class="item"><a href="https://consillium.vercel.app/">Consillium<span style="font-size: 0.8em; font-style: italic;"> via vercel</span></a></li>
                 <li class="item"><a href="https://goblin.tools/"> Magic To-do <span style="font-size: 0.8em; font-style: italic;"> by goblin.tools </span></a></li>
                 
@@ -382,7 +372,6 @@
             <ul>
                 <li class="item"><a href="https://summarize.ing/en">Summarize.ing<span style="font-size: 0.8em; font-style: italic;"> # 20/day</span></a></li>
                 <li class="item"><a href="https://www.summarize.tech/">Summarize.tech<span style="font-size: 0.8em; font-style: italic;"> # daily limits</span></a>
-                <li class="item"><a href="https://tammy.ai/">tammy<span style="font-size: 0.8em; font-style: italic;"> # 5/day</span></a>
                 <li class="item"><a href="https://scribetube.com/">ScribeTube<span style="font-size: 0.8em; font-style: italic;"> # Transcription</span></a>
             </ul>
         </div>
@@ -428,7 +417,6 @@
 
                 <li class="item"><a href="https://devv.ai/zh">DEVV</a></li>
                 <li class="item"><a href="https://codeium.com/live/general">Codeium</a></li>            
-                <li class="item"><a href="https://huggingface.co/spaces/m-a-p/OpenCodeInterpreter_demo"> OpenCode Interpreter <span style="font-size: 0.8em; font-style: italic;"> # via Hugging Face</span></a></li>
                 <li class="item"><a href="https://v0.dev/"> v0 <span style="font-size: 0.8em; font-style: italic;"> # by Vercel</span></a></li>
                 <li class="item"><a href="https://www.blackbox.ai/">Blackbox</a></li>
                 <li class="item"><a href="https://jit.codes/">Jit Codes</a></li>
