--- a/mobile.html
+++ b/mobile.html
@@ -212,7 +212,7 @@
             <li class="item"><a href="https://claude.ai/chat/7e6cda4b-e744-4791-ac12-c2866c08235f">Claude<span style="font-size: 0.8em; font-style: italic;"> by Anthropic</span></a></li>
             <li class="item"><a href="https://www.meta.ai/">Llama<span style="font-size: 0.8em; font-style: italic;"> by Meta</span></a></li>
             <li class="item"><a href="https://chat.mistral.ai/">Mistral</a></li>
-            <li class="item"><a href="https://x.ai/">xAI</a></li>                
+            <li class="item"><a href="https://x.ai/">Grok by xAI</a></li>                
             <li class="item"><a href="https://pi.ai/talk">Pi, personal AI</a></li>
             <li class="item"><a href="https://cohere.com/">Cohere</a></li>
             <li class="item"><a href="https://chat.reka.ai/chat">Reka</a></li>   
@@ -227,7 +227,7 @@
             function openall1() {
             var links = [
                     "https://www.perplexity.ai/",
-                    "https://felo.ai/search",
+
                     "https://websets.exa.ai/",
                     "https://exa.ai/search?c=all",
                     "https://kagi.com/",
@@ -249,7 +249,6 @@
         <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
-            <li class="item"><a href="https://felo.ai/search">Felo Search</a></li>
             <li class="item"><a href="https://websets.exa.ai/">Exa Websets</a></li>
             <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
             <li class="item"><a href="https://kagi.com/">Kagi Search</a></li>
@@ -273,6 +272,7 @@
         <script>
             function openall2() {
             var links = [
+                "https://felo.ai/search",      
                 "https://metaso.cn/",
                 "https://n.cn/",
                 "https://search.tiangong.cn/",
@@ -289,6 +289,7 @@
     <div class="urls">
         <hr style=border-color:#ff6600>
         <ul>
+            <li class="item"><a href="https://felo.ai/search">Felo Search</a></li>
             <li class="item"><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
             <li class="item"><a href="https://n.cn/">纳米搜索（原360搜索）</a></li>
             <li class="item"><a href="https://search.tiangong.cn/">天工 AI 搜索</a></li>
