--- a/mobile.html
+++ b/mobile.html
@@ -221,13 +221,29 @@
 </div>
 
 <div class="card" onclick="expandCard(this)">
+    <h2 class="header">LLMs  #大陆</h2>
+
+    <div class="urls">
+        <hr style=border-color:#ff6600>
+        <ul>
+            <li class="item"><a href="https://chat.deepseek.com/">deepseek<span style="font-size: 0.8em; font-style: italic;"></span></a></li>
+            <li class="item"><a href="https://tongyi.aliyun.com/">通义千问 <span style="font-size: 0.8em; font-style: italic;">by 阿里</span></a></li>   
+            <li class="item"><a href="https://www.doubao.com/chat/">豆包 <span style="font-size: 0.8em; font-style: italic;"> by 字节</span></a></li>
+            <li class="item"><a href="https://yiyan.baidu.com/">文心一言 <span style="font-size: 0.8em; font-style: italic;"> by 百度</span></a></li>     
+            <hr size="1" style="width: 50%; margin-left: 0;">
+            <li class="item"><a href="https://tingwu.aliyun.com/home">通意听悟<span style="font-size: 0.8em; font-style: italic;"> by 阿里</span></a></li>         
+        </ul>
+    </div>
+</div>
+
+<div class="card" onclick="expandCard(this)">
     <h2 class="header">Search
         <button class="float-right" onclick="openall1()">Open ALL</button>
         <script>
             function openall1() {
             var links = [
                     "https://www.perplexity.ai/",
-
+                    "https://oo.ai/",
                     "https://websets.exa.ai/",
                     "https://exa.ai/search?c=all",
                     "https://kagi.com/",
@@ -249,6 +265,7 @@
         <hr style=border-color:#ff6600>
         <ul>
             <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
+            <li class="item"><a href="https://oo.ai//">oo.ai</a></li>
             <li class="item"><a href="https://websets.exa.ai/">Exa Websets</a></li>
             <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
             <li class="item"><a href="https://kagi.com/">Kagi Search</a></li>
@@ -347,8 +364,6 @@
                             
             <hr size="1" style="margin-left: 0;">
 
-            <li class="item"><a href="https://yichat.ai/">YiCHAT<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
-            <li class="item"><a href="https://www.mixturegpt.com/">MixtureGPT<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>     
             <li class="item"><a href="https://web.chatboxai.app/">ChatBox<span style="font-size: 0.8em; font-style: italic;"> # w. API</span></a></li>
         </ul>
     </div>
