--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
                 var links = [
                     "https://www.perplexity.ai/",
                     "https://oo.ai/", 
+                    "https://www.phind.com/search?Home=true",
                     "https://websets.exa.ai/",
                     "https://exa.ai/search?c=all",
                     "https://kagi.com/",
                     "https://you.com/",
                     "https://iask.ai/",
-                    "https://www.phind.com/search?Home=true",
                     "https://komo.ai/",
                     "https://www.genspark.ai/",
                     "https://beago.ai/", 
@@ -256,12 +256,12 @@
             <ul>
                 <li class="item"><a href="https://www.perplexity.ai/">Perplexity Search</a></li>
                 <li class="item"><a href="https://oo.ai//">oo.ai</a></li>
+                <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
                 <li class="item"><a href="https://websets.exa.ai/">Exa Websets</a></li>
                 <li class="item"><a href="https://exa.ai/search?c=all">Exa Search</a></li>
                 <li class="item"><a href="https://kagi.com/">Kagi Search</a></li>                  
                 <li class="item"><a href="https://you.com/">YOU.com<br/></a></li>
                 <li class="item"><a href="https://iask.ai/">iAsk<br/></a></li>
-                <li class="item"><a href="https://www.phind.com/search?home=true">Phind</a></li>
                 <li class="item"><a href="https://komo.ai/">KOMO Search</a></li>
                 <li class="item"><a href="https://www.genspark.ai/">Genspark</a></li>
                 <li class="item"><a href="https://beago.ai/">BeaGo</a></li>
@@ -312,6 +312,7 @@
 
             <ul>
                 <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
+                <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Destop (PS: still-alpha)</a></li>
                 <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
                 <li class="item"><a href="https://platform.openai.com/">OpenAI Playground</a></li>
                 <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
