--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
             <ul>
                 <li class="item"><a href="https://chat.openai.com/">ChatGPT<span style="font-size: 0.8em; font-style: italic;"> by OpenAI</span></a></li>
-                <li class="item"><a href="https://copilot.microsoft.com/">Microsoft Copilot</a></li>
+                <li class="item"><a href="https://copilot.microsoft.com/">... Microsoft Copilot</a></li>
                 <li class="item"><a href="https://gemini.google.com/app">Gemini<span style="font-size: 0.8em; font-style: italic;"> by Google</span></a></li>
                 <li class="item"><a href="https://claude.ai/chat/7e6cda4b-e744-4791-ac12-c2866c08235f">Claude<span style="font-size: 0.8em; font-style: italic;"> by Anthropic</span></a></li>
                 <li class="item"><a href="https://www.meta.ai/">Llama<span style="font-size: 0.8em; font-style: italic;"> by Meta</span></a></li>
@@ -312,7 +312,7 @@
 
             <ul>
                 <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
-                <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Destop (PS: still-alpha)</a></li>
+                <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Desktop (PS: still-alpha)</a></li>
                 <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
                 <li class="item"><a href="https://platform.openai.com/">OpenAI Playground</a></li>
                 <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
