--- a/mobile.html
+++ b/mobile.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LLMs</title>
     <link rel="icon" href="icon.ico">
-
+    <base target="_blank" rel="noopener noreferrer"> 
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -193,6 +194,9 @@
     </style>
 </head>
 <body>
+    <div style="background-color: #ff6600; color:rgb(3, 31, 2); text-align: center; padding: 20px 0; width: 100%;">
+        <h1 style="margin: 0; font-size: 1.5rem;">AI Directory</h1>
+    </div>
 
     <div style="text-align: right;">
         <span style="margin-right: 30px;">
@@ -228,10 +232,9 @@
         <ul>
             <li class="item"><a href="https://chat.deepseek.com/">deepseek<span style="font-size: 0.8em; font-style: italic;"></span></a></li>
             <li class="item"><a href="https://tongyi.aliyun.com/">通义千问 <span style="font-size: 0.8em; font-style: italic;">by 阿里</span></a></li>   
+            <li class="item"><a href="https://tingwu.aliyun.com/home">... 通意听悟</a></li>         
             <li class="item"><a href="https://www.doubao.com/chat/">豆包 <span style="font-size: 0.8em; font-style: italic;"> by 字节</span></a></li>
             <li class="item"><a href="https://yiyan.baidu.com/">文心一言 <span style="font-size: 0.8em; font-style: italic;"> by 百度</span></a></li>     
-            <hr size="1" style="width: 50%; margin-left: 0;">
-            <li class="item"><a href="https://tingwu.aliyun.com/home">通意听悟<span style="font-size: 0.8em; font-style: italic;"> by 阿里</span></a></li>         
         </ul>
     </div>
 </div>
