--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LLMs</title>
     <link rel="icon" href="icon.ico">
     <base target="_blank" rel="noopener noreferrer"> 
-    
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -202,8 +202,7 @@
 
     <div style="text-align: right; margin-top: 0px; margin-bottom: 10px;">
         <span style="margin-right: 30px;">
-            <a href="javascript:void(0);" onclick="window.location.href='mobile.html';" class="button-simple">Mobile View</a>
-            
+            <a href="mobile.html" target="_self"  class="button-simple">Mobile View</a>
         </span>
     </div>
 
