--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,7 @@
     <title>LLMs</title>
     <link rel="icon" href="icon.ico">
     <base target="_blank" rel="noopener noreferrer"> 
-    
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -200,7 +200,7 @@
 
     <div style="text-align: right;">
         <span style="margin-right: 30px;">
-            <a href="javascript:void(0);" onclick="window.location.href='index.html';" class="button-simple">Desktop View</a>
+            <a href="index.html" target="_self"  class="button-simple">Desktop View</a>
         </span>
     </div>
 
