--- a/mobile.html
+++ b/mobile.html
@@ -11,8 +11,6 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin-top: 20px;
-            margin-bottom: 50px;
             padding: 0;
             background: #1b2736;
             color: #ffffff;
@@ -122,15 +120,15 @@
         /* no backgroud color button */
         .button-simple {
             display: inline-block;
-            font-size: 1rem;
+            font-size: 0.9rem;
             font-weight: 600;
             color: #ff6600;
-            height: 28px;
             margin-top: 1%;
+            margin-bottom: 1%;
             padding-left: 10px;
             padding-right: 10px;
             padding-top: 5px;
-            padding-bottom: 0px;
+            padding-bottom: 5px;
             border: 1px solid #ff6600;
             border-radius: 5px;
             background-color: transparent;
