--- a/mobile.html
+++ b/mobile.html
@@ -196,7 +196,7 @@
         <h1 style="margin: 0; font-size: 1.5rem;">AI Directory</h1>
     </div>
 
-    <div style="text-align: right;">
+    <div style="text-align: right; padding-top: 15px; padding-bottom: 15px;">
         <span style="margin-right: 30px;">
             <a href="index.html" target="_self"  class="button-simple">Desktop View</a>
         </span>
