--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
             min-height: 200px; /* 设置最小高度，保持横排区块高度一致，数值需根据实际情况调整 */
             padding: 15px; /* 可选：增加内边距，让内容与边框有一定距离 */
             box-sizing: border-box; /* 可选：防止 padding 撑大 section 的实际实际高度 */
-            border: 2px solid transparent; /* 预先设置透明边框 */
+            border: 1px solid transparent; /* 预先设置透明边框 */
         }
         .section:hover {
-            border: 2px solid #ff660071;
+            border: 1px solid #ff660071;
         }
         
         /* orange backgroud button */
@@ -251,7 +251,7 @@
             <ul>
                 <li class="item"><a href="https://chat.deepseek.com/">deepseek<span style="font-size: 0.8em; font-style: italic;"></span></a></li>
                 <li class="item"><a href="https://tongyi.aliyun.com/">通义千问 <span style="font-size: 0.8em; font-style: italic;">by 阿里</span></a></li>   
-                <li class="item"><a href="https://tingwu.aliyun.com/home">... 通意听悟</a></li>         
+                <li class="item"><a href="https://tingwu.aliyun.com/home">... 通义听悟</a></li>         
                 <li class="item"><a href="https://www.doubao.com/chat/">豆包 <span style="font-size: 0.8em; font-style: italic;"> by 字节</span></a></li>
                 <li class="item"><a href="https://yiyan.baidu.com/">文心一言 <span style="font-size: 0.8em; font-style: italic;"> by 百度</span></a></li>     
 
@@ -345,16 +345,18 @@
             <ul>
                 <li class="item"><a href="https://chat.lmsys.org/">Chatbot Arena<span style="font-size: 0.8em; font-style: italic;"> by UC Berkeley</span></a></li>
                 <li class="item"><a href="https://alpha.lmarena.ai/">... Chatbot Arena Desktop (PS: still-alpha)</a></li>
+                <li class="item"><a href="https://openrouter.ai/">OpenRouter</a></li>
+                <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+                <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
+                <li class="item"><a href="https://playground.ai.cloudflare.com/"> Cloudflare <span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+                <hr size="1" style="width: 50%; margin-left: 0;">                                
                 <li class="item"><a href="https://makersuite.google.com/app/prompts/new_freeform">Google AI Studio</a></li>
                 <li class="item"><a href="https://platform.openai.com/">OpenAI Playground</a></li>
                 <li class="item"><a href="https://console.groq.com/playground">Groq Playground</a></li>
                 <li class="item"><a href="https://console.anthropic.com/login?selectAccount=true&returnTo=%2Fdashboard">Anthropic Console for Claude</a></li>
                 <li class="item"><a href="https://labs.perplexity.ai/">Perplexity Labs</a></li>
                 <li class="item"><a href="https://dashboard.cohere.com/playground/chat">Cohere Playground</a></li>
-                <li class="item"><a href="https://opengpts-example-vz4y4ooboq-uc.a.run.app/">OpenGPTs<span style="font-size: 0.8em; font-style: italic;"> by Langchain</span></a></li>
-                <li class="item"><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
-                <li class="item"><a href="https://ai.azure.com/"> Azure AI Studio </a></li>
-                <li class="item"><a href="https://playground.ai.cloudflare.com/"> Cloudflare <span style="font-size: 0.8em; font-style: italic;"> # open-source only</span></a></li>
+
 
                 <hr size="1" style="width: 50%; margin-left: 0;">
 
